Closed
Bug 407063
Opened 18 years ago
Closed 18 years ago
Bottom border of title bar on Leopard does not dim properly
Categories
(Core :: Widget: Cocoa, defect, P3)
Tracking
()
RESOLVED
FIXED
People
(Reporter: cbarrett, Assigned: cbarrett)
References
Details
Attachments
(1 file)
4.60 KB,
patch
|
jaas
:
review+
roc
:
superreview+
damons
:
approvalM10-
|
Details | Diff | Splinter Review |
STR:
- Focus a Firefox window.
- Click on another window.
Expected results:
Titlebar and bottom border of it dim
Actual results:
Titlebar dims, bottom border does not.
This is my fault, I somehow missed writing this code for bug 404096, and the testcase I put in the bug for QA didn't say "and make sure it matches TextEdit" or anything.
Patch attached, has some extra comment fixes as well.
Attachment #291774 -
Flags: review?(joshmoz)
Attachment #291774 -
Flags: superreview?(roc)
Attachment #291774 -
Flags: review?(joshmoz)
Attachment #291774 -
Flags: review+
Attachment #291774 -
Flags: superreview?(roc) → superreview+
Assignee | ||
Comment 1•18 years ago
|
||
Comment on attachment 291774 [details] [diff] [review]
fix v1.0
This is a small patch to fix a small visual glitch in the titlebar. It certainly annoys me when using nightlies that exhibit this behavior.
Low risk.
Attachment #291774 -
Flags: approvalM10?
Comment 2•18 years ago
|
||
Comment on attachment 291774 [details] [diff] [review]
fix v1.0
We'll get this in the next release. aM10-.
Attachment #291774 -
Flags: approvalM10? → approvalM10-
Assignee | ||
Comment 3•18 years ago
|
||
Checking in widget/src/cocoa/nsCocoaWindow.mm;
/cvsroot/mozilla/widget/src/cocoa/nsCocoaWindow.mm,v <-- nsCocoaWindow.mm
new revision: 1.126; previous revision: 1.125
done
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•