Bug 407063 - Bottom border of title bar on Leopard does not dim properly. r=joshmoz, sr=roc.